[package]
name = "pysight"
version = "0.10.0"
authors = ["Hagai Har-Gil <hagaihargil@protonmail.com>"]
edition = '2018'

[dependencies]
filebuffer = "0.3"
failure = "0.1"
failure_derive = "0.1"
rayon = "1.0.2"
byteorder = "1.2.6"

[dependencies.pyo3]
version = "0.4"
features = ["extension-module"]

[dev-dependencies]
criterion = "0.2"

[lib]
name = "libpysight"
crate-type = ["cdylib"]
path = "libpysight/lib.rs"